--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="com_auth0_client_id">OpeFm2WLTsU0VtI6SYyampjLqwG8rN4m</string>
     <string name="com_auth0_domain">rollcall-app.auth0.com</string>
+    <string name="qr_description">Scan the QR Code to Sign In!</string>
+    <string name="welcome">Welcome, !</string>
 </resources>
