--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="com_auth0_client_id">OpeFm2WLTsU0VtI6SYyampjLqwG8rN4m</string>
     <string name="com_auth0_domain">rollcall-app.auth0.com</string>
     <string name="qr_description">Scan the QR Code to Sign In!</string>
-    <string name="welcome">Welcome, !</string>
+    <string name="welcome">{Welcome  + user.firstName + !}</string>
     <string name="SignIn">Sign In</string>
 </resources>
