--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="welcome">{Welcome  + user.firstName + !}</string>
     <string name="SignIn">Sign In</string>
     <string name="LogIn">Log In</string>
+    <string name="Close">Close</string>
     <string name="API">https://rollcall-api.herokuapp.com</string>
     <string name="request_credentials_title">Authenticate to continue</string>
     <string name="orgs">My orgs</string>
@@ -18,4 +19,12 @@
     <string name="Phone">Phone Number (XXX-XXX-XXXX)</string>
     <string name="PhoneHint">Phone Number</string>
     <string name="Year">Year</string>
+    <string name="Additional">Additional Questions</string>
+    <string name="Info">Please provide the following information</string>
+    <string name="uhoh">Uh oh</string>
+    <string name="bad">This event is not open for sign in right now!</string>
+    <string name="good">Success</string>
+    <string name="checkedin">You have signed in to </string>
+    <string name="thanks">Thanks for coming!</string>
+    <string name="Done">Done</string>
 </resources>
