--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
 
     <string name="com_auth0_client_id">OpeFm2WLTsU0VtI6SYyampjLqwG8rN4m</string>
     <string name="com_auth0_domain">rollcall-app.auth0.com</string>
-    <string name="qr_description">Scan the QR Code to Sign In!</string>
+    <string name="qr_description">Scan the QR code to sign in!</string>
     <string name="welcome">{Welcome  + user.firstName + !}</string>
+    <string name="RollCall">Roll Call</string>
     <string name="SignIn">Sign In</string>
     <string name="LogIn">Log In</string>
     <string name="Close">Close</string>
@@ -12,12 +13,12 @@
     <string name="request_credentials_title">Authenticate to continue</string>
     <string name="orgs">My orgs</string>
     <string name="Registration">Roll Call Registration</string>
-    <string name="Register">Register!</string>
-    <string name="FirstName">First Name</string>
-    <string name="LastName">Last Name</string>
+    <string name="Register">Register</string>
+    <string name="FirstName"> First Name</string>
+    <string name="LastName"> Last Name</string>
     <string name="Email">Email</string>
     <string name="Phone">Phone Number (XXX-XXX-XXXX)</string>
-    <string name="PhoneHint">Phone Number</string>
+    <string name="PhoneHint"> Phone Number</string>
     <string name="Year">Year</string>
     <string name="Additional">Additional Questions</string>
     <string name="Info">Please provide the following information</string>
